<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Otpverification.OtpSendActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/aniOtp"
                android:layout_width="match_parent"
                android:layout_height="152dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/otp"
                android:layout_marginTop="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OTP Verification"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="91dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="We will send otp to your entered mobile number."
                android:textColor="@color/grey"
                android:textSize="17sp"
                android:layout_marginTop="10sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/background_input"
                    android:text="+91"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/inputPhno"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/background_input"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:paddingStart="20sp"
                    android:paddingEnd="20sp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginLeft="10sp"/>

            </LinearLayout>
            
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSendotp"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:text="@string/send_otp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="8sp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="25sp"
                    android:layout_height="50sp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </FrameLayout>

            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35sp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>